--- a/graduation-front/src/index.css
+++ b/graduation-front/src/index.css
@@ -15,3 +15,51 @@
         filter: drop-shadow(6px 8px 10px rgb(0,0,0,0.5));
     }
 }
+.sidebar-group {
+    @apply flex w-full flex-col gap-y-2;
+}
+.sidebar-group-title {
+    @apply overflow-hidden text-ellipsis text-sm font-medium text-slate-600 dark:text-slate-400;
+}
+.sidebar-item {
+   @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-3 rounded-lg p-3 text-base font-medium text-slate-900 transition-colors hover:bg-red dark:text-slate-50 dark:hover:bg-blue;
+  /* &.active{
+    @apply bg-blue text-slate-50 dark:bg-blue;
+
+   }*/
+}
+.title {
+    @apply text-3xl font-semibold text-slate-900 transition-colors dark:text-slate-50;
+}
+.btn-ghost {
+    @apply flex h-10 flex-shrink-0 items-center justify-center gap-x-2 rounded-lg p-2 text-slate-400 transition-colors hover:bg-red hover:text-slate-500 dark:hover:bg-blue dark:hover:text-slate-300;
+}
+.input {
+    @apply hidden h-10 flex-shrink-0 items-center gap-x-2 rounded-lg border border-slate-300 px-2 text-base text-slate-900 transition-colors has-[input:focus]:border-blue md:flex md:w-auto lg:w-80 dark:border-slate-700 dark:text-slate-50 dark:focus:border-blue;
+}
+.card {
+    @apply flex flex-col gap-y-4 rounded-lg border border-slate-300 bg-white p-4 transition-colors dark:border-slate-700 dark:bg-slate-900;
+}
+.card-header {
+    @apply flex items-center gap-x-2;
+}
+
+.card-title {
+    @apply font-medium text-slate-900 transition-colors dark:text-slate-50;
+}
+
+.card-body {
+    @apply flex flex-col gap-y-2 rounded-lg p-4;
+}
+.recharts-default-tooltip {
+    @apply !rounded-lg !border !border-slate-300 !bg-white transition-colors dark:!border-slate-700 dark:!bg-slate-900;
+}
+
+.recharts-tooltip-label {
+    @apply text-base font-medium text-slate-900 dark:text-slate-50;
+}
+
+.recharts-tooltip-item {
+    @apply text-base font-medium !text-blue dark:!text-blue;
+}
+
